# ajcopendata

opendata/: CMakeLists.txt  data.json  intel  main.cpp
